navidrome/navidrome-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome
  namespace: navidrome-ns
spec:
  selector:
    matchLabels:
      app: navidrome
  template:
    metadata:
      labels:
        app: navidrome
    spec:
      nodeSelector:
        kubernetes.io/hostname: gluttony
      securityContext:
        fsGroup: 1000
      containers:
      - name: navidrome
        image: deluan/navidrome:latest
        securityContext:
          runAsUser: 1000
          runAsGroup: 1000
        ports:
        - containerPort: 4533
        volumeMounts:
        - name: data
          mountPath: "/data"
        - name: music
          mountPath: "/music"
          readOnly: true
        - name: cache
          mountPath: "/cache"
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: navidrome-pvc-data
      - name: music
        persistentVolumeClaim:
          claimName: navidrome-pvc-music
      - name: cache
        emptyDir: {}
