navidrome/navidrome-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: navidrome-services
  namespace: navidrome-ns
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 4533
    protocol: TCP
  selector:
    app: navidrome
